# taski

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/taski/: Cargo.toml
crates/taski-config/: Cargo.toml
crates/taski-config/src/: lib.rs
crates/taski-core/: Cargo.toml
crates/taski-core/src/: lib.rs
crates/taski-core/tests/: corpus_test.rs  inbox_line_proptest.rs  proptest_test.rs  rewrite_cancelled_date_proptest.rs  rewrite_done_date_proptest.rs  rewrite_scheduled_proptest.rs  tag_extraction_proptest.rs
crates/taski-core/tests/corpus/: basic.expected  basic.md  blockquote.expected  blockquote.md  due_date.expected  due_date.md  fenced.md  nested.expected  nested.md  scheduled.expected  scheduled.md  unusual_checkbox.expected  unusual_checkbox.md
crates/taski-daemon/: Cargo.toml
crates/taski-daemon/src/: lib.rs  lock.rs  main.rs  shutdown.rs
crates/taski-daemon/tests/: add_note.rs  archive.rs  archive_writeback_proptest.rs  cancelled_date_writeback_proptest.rs  done_date_writeback_proptest.rs  metadata_writeback_proptest.rs  quick_add_writeback_proptest.rs  reconcile.rs  reorder.rs  scan.rs  writeback.rs  writeback_proptest.rs
crates/taski-db/: Cargo.toml
crates/taski-db/src/: lib.rs
crates/taski-tui/: Cargo.toml
crates/taski-tui/src/: lib.rs  main.rs  theme.rs
crates/taski/src/: main.rs
docs/: PRD.md  config.md  context.md  idea.md  roadmap.md  setup.md  tech.md
docs/adr/: 0001-rusqlite-not-limbo.md  0002-write-back-through-daemon.md  0003-checkbox-only-mvp.md  0004-refuse-on-conflict.md  0005-surrogate-identity.md  0006-note-content-cached-in-index.md  0007-unified-in-process-launcher.md  0008-single-writer-file-lock.md  0009-scheduled-date-today.md  0010-text-search.md  0011-bullet-toggle-undo.md  0012-done-date-on-toggle.md  0013-cancelled-date-on-cancel.md  0014-quick-add-inbox-creation.md  0015-open-in-obsidian-deep-link.md  0016-in-progress-toggle.md  0017-frontmatter-taski-skip-opt-out.md  0018-theming-and-per-panel-density.md  0019-task-notes-annotation.md  0020-task-reordering.md  0021-archive-completed-tasks.md  0022-today-view-includes-due-today.md
docs/cr/: CR1.md
docs/features/: task-context-pane.md  theming.md  unified-launcher.md
docs/themes/: README.md  catppuccin.md  gruvbox-dark.md  light.md  nord.md  opencode.md  tokyo-night.md
scripts/: install-launchd.sh  uninstall-launchd.sh
