[workspace]
resolver = "2"
members = [
    "crates/taski-core",
    "crates/taski-config",
    "crates/taski-db",
    "crates/taski-daemon",
    "crates/taski-tui",
    "crates/taski",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.93"
license = "MIT"

[workspace.dependencies]
# Internal crates
taski-core = { path = "crates/taski-core" }
taski-config = { path = "crates/taski-config" }
taski-db = { path = "crates/taski-db" }

# External crates
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3"
fs2 = "0.4"
notify = "8"
notify-debouncer-mini = "0.6"
proptest = "1"
ratatui = "0.30"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
