[package]
name = "taski-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
taski-core.workspace = true
taski-config.workspace = true
taski-db.workspace = true
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
fs2.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
