[package]
name = "taski-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
taski-config.workspace = true
taski-db.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
clap.workspace = true
rusqlite.workspace = true
tracing.workspace = true
