[package]
name = "taski"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
taski-daemon = { path = "../taski-daemon" }
taski-tui = { path = "../taski-tui" }
taski-config.workspace = true
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
